[gd_scene load_steps=35 format=3 uid="uid://ciimi8mjv1004"]

[ext_resource type="Texture2D" uid="uid://dgxwc0ythw636" path="res://Assets/Field_V2.png" id="1_s1owj"]
[ext_resource type="Texture2D" uid="uid://tcrjtvqyi85b" path="res://Assets/Health.png" id="2_hle2b"]
[ext_resource type="Script" uid="uid://y4w8jn8omovb" path="res://Scripts/animation_manager.gd" id="5_q5daf"]
[ext_resource type="PackedScene" uid="uid://cu8k4sphid8os" path="res://GameObj/GameWindow/card_inspector.tscn" id="6_pq28x"]
[ext_resource type="Script" uid="uid://lhrend5pv3li" path="res://Scripts/card_inspector.gd" id="7_2top2"]
[ext_resource type="PackedScene" uid="uid://cdyi4fi66xuk0" path="res://GameObj/GameWindow/search_box.tscn" id="9_bxhp4"]
[ext_resource type="Script" uid="uid://cokrbvntouxpg" path="res://Scripts/chat.gd" id="9_s1owj"]
[ext_resource type="Texture2D" uid="uid://bpncrr3ol2ggi" path="res://Assets/ChatBox.png" id="9_sopy5"]
[ext_resource type="PackedScene" uid="uid://bmsu0lhtknsva" path="res://GameObj/GameWindow/tracker.tscn" id="10_s1owj"]
[ext_resource type="Script" uid="uid://b0fbsvaju1rga" path="res://Scripts/search_box.gd" id="10_vimqo"]
[ext_resource type="Texture2D" uid="uid://c5qrruaa2naif" path="res://Assets/ChatChat.png" id="11_ei1sk"]
[ext_resource type="Texture2D" uid="uid://csp0g0vecwhmv" path="res://Assets/TurnSequence/YourTurn.png" id="11_m50fb"]
[ext_resource type="Script" uid="uid://bngmwgf6fxbd6" path="res://Scripts/turn_sequence.gd" id="11_pghvb"]
[ext_resource type="Texture2D" uid="uid://s3tr7fdstxyl" path="res://Assets/TurnSequence/StartofGame.png" id="12_pghvb"]
[ext_resource type="Texture2D" uid="uid://dn7vssvtwnek6" path="res://Assets/ComboChat.png" id="12_py75x"]
[ext_resource type="Texture2D" uid="uid://bxeiy1q4frupr" path="res://Assets/GameStateChat.png" id="13_a7iln"]
[ext_resource type="Texture2D" uid="uid://cd5c0o285r0ar" path="res://Assets/Arrows.png" id="14_2top2"]
[ext_resource type="Script" uid="uid://b2y105x4g7nkf" path="res://Scripts/advance_phase.gd" id="15_tlaju"]
[ext_resource type="Script" uid="uid://cv6243g7x06es" path="res://Scripts/revert_phase.gd" id="16_bxhp4"]
[ext_resource type="Texture2D" uid="uid://bc3nadu04xbnd" path="res://Assets/TurnSequence/AttackSeq.png" id="17_bxhp4"]
[ext_resource type="Script" uid="uid://s1j55si6j13g" path="res://Scripts/attack_seq.gd" id="18_vimqo"]
[ext_resource type="Script" uid="uid://c8g0rygds7trb" path="res://Scripts/effectPicker.gd" id="22_a7iln"]
[ext_resource type="Texture2D" uid="uid://bbu8ld3fhgokv" path="res://Assets/SearchBoxDown.png" id="23_8oxrw"]
[ext_resource type="Script" uid="uid://c7bices3rpeip" path="res://Scripts/masking.gd" id="24_1vkwx"]
[ext_resource type="PackedScene" uid="uid://bpqcjcs1ffe1" path="res://GameObj/GameWindow/EffectTab.tscn" id="24_8oxrw"]
[ext_resource type="Script" uid="uid://1uwcakrljnca" path="res://Scripts/x_button.gd" id="24_fu8iq"]
[ext_resource type="Texture2D" uid="uid://de72xvkv3lfa2" path="res://Assets/X_Button.png" id="24_g2c1a"]
[ext_resource type="Script" uid="uid://dwe227kopmint" path="res://Scripts/game_controls.gd" id="28_jin74"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2top2"]
size = Vector2(62.5, 63)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tlaju"]
size = Vector2(63, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fsa6c"]
size = Vector2(183, 66)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1vkwx"]
size = Vector2(74.473755, 69.13727)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fu8iq"]
size = Vector2(1295, 280)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2c1a"]
size = Vector2(44, 239)

[node name="Field" type="Node2D"]

[node name="PlayArea" type="Sprite2D" parent="."]
position = Vector2(960.25, 538.563)
scale = Vector2(1, 0.998)
texture = ExtResource("1_s1owj")

[node name="AnimationManager" type="Node2D" parent="."]
script = ExtResource("5_q5daf")

[node name="CardInspector" parent="." instance=ExtResource("6_pq28x")]
z_index = -1000
script = ExtResource("7_2top2")

[node name="SearchBox" parent="." instance=ExtResource("9_bxhp4")]
z_index = -1000
script = ExtResource("10_vimqo")

[node name="Tracker" parent="." instance=ExtResource("10_s1owj")]

[node name="RivalHealth" type="Node2D" parent="."]

[node name="Icon" type="Sprite2D" parent="RivalHealth"]
position = Vector2(1800, 78)
scale = Vector2(1.4, 1.4)
texture = ExtResource("2_hle2b")

[node name="Label" type="RichTextLabel" parent="RivalHealth"]
offset_left = 1716.0
offset_top = -15.0
offset_right = 1887.0
offset_bottom = 143.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 18
theme_override_font_sizes/normal_font_size = 80
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerHealth" type="Node2D" parent="."]

[node name="Icon" type="Sprite2D" parent="PlayerHealth"]
position = Vector2(100, 1000)
scale = Vector2(1.4, 1.4)
texture = ExtResource("2_hle2b")

[node name="Label" type="RichTextLabel" parent="PlayerHealth"]
offset_left = -5.0
offset_top = 902.0
offset_right = 205.0
offset_bottom = 1072.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 18
theme_override_font_sizes/normal_font_size = 80
horizontal_alignment = 1
vertical_alignment = 1

[node name="Chat" type="Node2D" parent="."]
script = ExtResource("9_s1owj")

[node name="Sprite2D" type="Sprite2D" parent="Chat"]
position = Vector2(1758, 753)
scale = Vector2(1, 0.945)
texture = ExtResource("9_sopy5")
centered = false

[node name="LineEdit" type="LineEdit" parent="Chat"]
offset_left = 1757.0
offset_top = 1043.0
offset_right = 1917.0
offset_bottom = 1074.0

[node name="ScrollContainer" type="ScrollContainer" parent="Chat"]
custom_minimum_size = Vector2(145, 275)
offset_left = 1765.0
offset_top = 758.0
offset_right = 1910.0
offset_bottom = 1033.0
horizontal_scroll_mode = 0

[node name="RichTextLabel" type="RichTextLabel" parent="Chat/ScrollContainer"]
custom_minimum_size = Vector2(145, 275)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 12
vertical_alignment = 2

[node name="VScrollBar" type="VScrollBar" parent="Chat"]
visible = false
offset_right = 8.0
offset_bottom = 8.0

[node name="RichTextLabel" type="RichTextLabel" parent="Chat/VScrollBar"]
layout_mode = 0
offset_left = 1765.0
offset_top = 738.0
offset_right = 1910.0
offset_bottom = 1033.0
theme_override_font_sizes/normal_font_size = 12
vertical_alignment = 2

[node name="DisplayChat" type="TextureButton" parent="Chat"]
offset_left = 1730.0
offset_top = 950.0
offset_right = 1757.0
offset_bottom = 977.0
texture_normal = ExtResource("11_ei1sk")

[node name="DisplayCombo" type="TextureButton" parent="Chat"]
offset_left = 1730.0
offset_top = 980.0
offset_right = 1757.0
offset_bottom = 1007.0
texture_normal = ExtResource("12_py75x")

[node name="DiscplayLog" type="TextureButton" parent="Chat"]
offset_left = 1730.0
offset_top = 1010.0
offset_right = 1757.0
offset_bottom = 1037.0
texture_normal = ExtResource("13_a7iln")

[node name="TurnSequence" type="Node2D" parent="."]
script = ExtResource("11_pghvb")

[node name="TurnPlayer" type="Sprite2D" parent="TurnSequence"]
position = Vector2(200, 539)
texture = ExtResource("11_m50fb")

[node name="TurnSequence" type="Sprite2D" parent="TurnSequence"]
position = Vector2(960, 539)
texture = ExtResource("12_pghvb")

[node name="AdvancePhase" type="Sprite2D" parent="TurnSequence"]
position = Vector2(1220, 539)
scale = Vector2(2, 2)
texture = ExtResource("14_2top2")
script = ExtResource("15_tlaju")

[node name="AdvanceArea" type="Area2D" parent="TurnSequence/AdvancePhase"]
position = Vector2(-610, -269.5)
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurnSequence/AdvancePhase/AdvanceArea"]
position = Vector2(1220.75, 538.5)
shape = SubResource("RectangleShape2D_2top2")

[node name="RevertPhase" type="Sprite2D" parent="TurnSequence"]
position = Vector2(700, 539)
rotation = 3.1415927
scale = Vector2(2, 2)
texture = ExtResource("14_2top2")
script = ExtResource("16_bxhp4")

[node name="RevertArea" type="Area2D" parent="TurnSequence/RevertPhase"]
position = Vector2(350.00003, 269.49997)
rotation = 3.1415925
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurnSequence/RevertPhase/RevertArea"]
position = Vector2(699.5, 538)
shape = SubResource("RectangleShape2D_tlaju")

[node name="AttackSeq" type="Sprite2D" parent="."]
visible = false
position = Vector2(1375, 539)
texture = ExtResource("17_bxhp4")
script = ExtResource("18_vimqo")

[node name="Area2D" type="Area2D" parent="AttackSeq"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackSeq/Area2D"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_fsa6c")
disabled = true

[node name="EffectsWindow" type="Node2D" parent="."]
z_index = 1000
position = Vector2(2000, 0)
script = ExtResource("22_a7iln")

[node name="Sprite2D" type="Sprite2D" parent="EffectsWindow"]
position = Vector2(1038, 329)
texture = ExtResource("23_8oxrw")

[node name="X button" type="Sprite2D" parent="EffectsWindow"]
position = Vector2(1682.875, 214.00002)
scale = Vector2(0.5639569, 0.59302324)
texture = ExtResource("24_g2c1a")
script = ExtResource("24_fu8iq")

[node name="Area2D" type="Area2D" parent="EffectsWindow/X button"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EffectsWindow/X button/Area2D"]
position = Vector2(5.54126, -7.588257)
shape = SubResource("RectangleShape2D_1vkwx")

[node name="Masking" type="Node2D" parent="EffectsWindow"]
script = ExtResource("24_1vkwx")

[node name="Area2D" type="Area2D" parent="EffectsWindow/Masking"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EffectsWindow/Masking/Area2D"]
position = Vector2(1017.5, 329)
shape = SubResource("RectangleShape2D_fu8iq")

[node name="Area2D2" type="Area2D" parent="EffectsWindow/Masking"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EffectsWindow/Masking/Area2D2"]
position = Vector2(1686, 349.5)
shape = SubResource("RectangleShape2D_g2c1a")

[node name="EffectList" type="TabContainer" parent="EffectsWindow"]
custom_minimum_size = Vector2(1309, 217)
offset_left = 379.0
offset_top = 240.0
offset_right = 1688.0
offset_bottom = 457.0
current_tab = 0

[node name="Tab" parent="EffectsWindow/EffectList" instance=ExtResource("24_8oxrw")]
layout_mode = 2

[node name="WindowTitle" type="RichTextLabel" parent="EffectsWindow"]
offset_left = 391.0
offset_top = 191.0
offset_right = 1640.0
offset_bottom = 242.0
theme_override_constants/outline_size = 12
theme_override_font_sizes/normal_font_size = 30
text = "Abilities for"
vertical_alignment = 1

[node name="GameControls" type="Node2D" parent="."]
script = ExtResource("28_jin74")

[node name="LeaveGame" type="Button" parent="GameControls"]
offset_left = 190.0
offset_top = 1035.0
offset_right = 317.0
offset_bottom = 1071.0
theme_override_font_sizes/font_size = 20
text = "Leave Game"

[connection signal="text_submitted" from="Chat/LineEdit" to="Chat" method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="Chat/DisplayChat" to="Chat" method="_on_display_chat_pressed"]
[connection signal="pressed" from="Chat/DisplayCombo" to="Chat" method="_on_display_combo_pressed"]
[connection signal="pressed" from="Chat/DiscplayLog" to="Chat" method="_on_discplay_log_pressed"]
[connection signal="pressed" from="GameControls/LeaveGame" to="GameControls" method="_on_leave_game_pressed"]
